--- a/style.css
+++ b/style.css
@@ -19,41 +19,64 @@ body {
   justify-content: center;
 }
 
-.quote-container{
+.quote-container {
   width: auto;
   max-width: 900px;
   padding: 20px 30px;
-  border-radius: rgba(255,255,255,0.4);
-  box-shadow: 0 10px 10px 10px rgba(0,0,0,0.2);
+  border-radius: rgba(255, 255, 255, 0.4);
+  box-shadow: 0 10px 10px 10px rgba(0, 0, 0, 0.2);
 }
 
-.quote-text{
+.quote-text {
   font-size: 2.75rem;
 }
 
-.long-quote{
+.long-quote {
   font-size: 2rem;
 }
 
-.fa-quote-left{
+.fa-quote-left {
   font-size: 4rem;
 }
 
-.quote-author{
+.quote-author {
   margin-top: 15px;
   font-size: 2rem;
   font-weight: 400;
   font-style: italic;
 }
 
+.button-container {
+  margin-top: 15px;
+  display: flex;
+  justify-content: space-between;
+}
+
+button {
+  cursor: pointer;
+  font-size: 1.2rem;
+  height: 2.5rem;
+  border: none;
+  border-radius: 10px;
+  color: #fff;
+  background: #333;
+  outline: none;
+  padding: .5rem 1.8rem;
+  box-shadow: 0 0.3rem rgba(121, 121, 121, 0.4);
+}
+
+button:hover {
+  filter: brightness(110%);
+}
+
 /* Media Query */
-@media screen and (max-width: 1000px){
-  .quote-container{
+@media screen and (max-width: 1000px) {
+  .quote-container {
     margin: auto 10px
   }
 
-  .quote-text{
-    font-size:2.5rem
+  .quote-text {
+    font-size: 2.5rem
   }
 
 }
