--- a/style.css
+++ b/style.css
@@ -62,12 +62,28 @@ button {
   background: #333;
   outline: none;
   padding: .5rem 1.8rem;
-  box-shadow: 0 0.3rem rgba(121, 121, 121, 0.4);
+  box-shadow: 0 0.3rem rgba(121, 121, 121, 0.65);
 }
 
 button:hover {
   filter: brightness(110%);
 }
+
+button:active{
+  transform: translate(0,0.3rem);
+  box-shadow:0 0.1rem rgba(121, 121, 121, 0.65);
+}
+
+.twitter-button:hover{
+  color:#38a1f3;
+}
+
+.fa-twitter{
+  font-size: 1.5rem;
+}
+
+
+
 
 /* Media Query */
 @media screen and (max-width: 1000px) {
