--- a/style.css
+++ b/style.css
@@ -69,19 +69,33 @@ button:hover {
   filter: brightness(110%);
 }
 
-button:active{
-  transform: translate(0,0.3rem);
-  box-shadow:0 0.1rem rgba(121, 121, 121, 0.65);
+button:active {
+  transform: translate(0, 0.3rem);
+  box-shadow: 0 0.1rem rgba(121, 121, 121, 0.65);
 }
 
-.twitter-button:hover{
-  color:#38a1f3;
+.twitter-button:hover {
+  color: #38a1f3;
 }
 
-.fa-twitter{
+.fa-twitter {
   font-size: 1.5rem;
 }
 
+/* Loader */
+.loader {
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid #333;
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
 
 
 
